--- a/AmbienteDocker/docker-compose.yml
+++ b/AmbienteDocker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   spark-master:
     image: bitnami/spark:latest
@@ -8,6 +7,9 @@ services:
     ports:
       - "7077:7077"
       - "8080:8080"
+      - "4040:4040"
+    networks:
+      - sparknet
 
   spark-worker:
     image: bitnami/spark:latest
@@ -19,3 +21,23 @@ services:
       - spark-master
     ports:
       - "8081:8081"
+    networks:
+      - sparknet
+
+  jupyter:
+    image: jupyter/pyspark-notebook
+    container_name: jupyter
+    ports:
+      - "8888:8888"
+    volumes:
+      - ../AnaliseDeDados:/home/jovyan/work
+    environment:
+      - PYSPARK_PYTHON=python3
+      - SPARK_MASTER=spark://spark-master:7077
+      - SPARK_HOME=/usr/local/spark
+    networks:
+      - sparknet
+
+networks:
+  sparknet:
+    driver: bridge
